# sprint-tools

./: .flake8  .gitignore  Pipfile  README.md  label-cards-in-sprint.py  label-needs-description.py  move-top-notes-to-top.py  setup.cfg  sort-by-priority.py  sprintman.py
.github/workflows/: copy-cards.yml  create-sprint-board.yml  run-tests.yml  sprint-board-maintenance-daily.yml  sprint-board-maintenance-hourly.yml  sprint-board-maintenance.yml
config/: sprint_dates.csv
moc_sprint_tools/: cards_missing_from_backlog.py  cardwrapper.py  cli.py  create_sprint_boards.py  defaults.py  label_cards_in_sprint.py  label_needs_description.py  sort_cards_by_priority.py  sprintman.py  utils.py
moc_sprint_tools/cmd/: close_sprint_boards.py  copy_cards.py  create_sprint_boards.py  remove_done_cards.py
moc_sprint_tools/templates/: backlog_note.j2  sprint_description.j2  sprint_notes_description.j2  sprint_notes_title.j2  sprint_title.j2
tests/: conftest.py  test_cardwrapper.py  test_cli.py  test_cli_create_sprint_boards.py  test_sprintman.py  test_utils.py
